[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doxygen-awesome-css"
dynamic = ["version"]
description = "Custom CSS theme for doxygen html-documentation with lots of customization parameters."
authors = [
    {name = "jothepro", email = "jothepro@github.com"},
    {name = "mohammadraziei", email = "mohammadraziei@github.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["doxygen", "css", "theme", "awesome"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://jothepro.github.io/doxygen-awesome-css/"
Repository = "https://github.com/jothepro/doxygen-awesome-css.git"

[project.scripts]
doxygen-awesome-css = "doxygen_awesome_css.__main__:main"

[tool.hatch.version]
path = "doxygen_awesome_css/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["doxygen_awesome_css"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
